[build-system]
requires = ["hatchling",'validators', 'beautifulsoup4',]
build-backend = "hatchling.build"
[project]
name = "QuBuilders"
version = "0.0.4"
authors = [
  { name="Amirrza Zahraei", email="amir.reza.zahraei@gmail.com" },
]
description = "a pakage that help you to make n choice questions faster"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AmirrezaZahraei1387/QuBu"
"Bug Tracker" = "https://github.com/AmirrezaZahraei1387/QuBu/issues"
